[package]
authors = ["Kabir Kwatra <kabir@kwatra.me>"]
categories = ["command-line-utilities"]
description = "CLI for Fast.com Internet Speed Test"
edition = "2018"
keywords = ["internet", "speed", "test", "speedtest", "fast", "fast.com"]
license = "LGPL-3.0-only"
name = "fast"
readme = "README.md"
version = "0.1.0"

[dependencies]
async-stream = "0.2.1"
futures = "0.3.5"
futures-util = "0.3.5"
lazy_static = "1.4.0"
quicli = "0.4.0"
regex = "1.3.9"
reqwest = {version = "0.10.6", features = ["json", "blocking"]}
select = "0.5.0"
serde = {version = "1.0.114", features = ["derive"]}
serde_json = "1.0.56"
spinners = '1.2.0'
structopt = "0.3.15"
term = "0.6.1"
tokio = {version = "0.2.21", features = ["full"]}
