[package]
authors = ["Kabir Kwatra <kabir@kwatra.me>"]
categories = ["command-line-utilities"]
description = "CLI for Fast.com Internet Speed Test"
edition = "2018"
keywords = ["internet", "speed", "test", "speedtest", "fast", "fast.com"]
license = "LGPL-3.0-only"
name = "fast"
readme = "README.md"
version = "0.1.1"

[dependencies]
async-stream = "0.3.2"
futures = "0.3.17"
futures-util = "0.3.17"
lazy_static = "1.4.0"
quicli = "0.4.0"
regex = "1.3.9"
reqwest = {version = "0.11.4", default_features = false, features = ["rustls-tls"]}
select = "0.5.0"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.67"
spinners = '2.0.0'
structopt = "0.3.23"
term = "0.7.0"
tokio = {version = "1.11.0", features = ["macros", "time", "rt-multi-thread"]}
