[package]
name = "fast"
version = "0.1.1"
description = "CLI for Fast.com Internet Speed Test"
authors = ["Kabir Kwatra <kabir@kwatra.me>"]
categories = ["command-line-utilities"]
keywords = ["internet", "speed", "test", "speedtest", "fast", "fast.com"]
license = "LGPL-3.0-only"
readme = "README.md"
edition = "2018"

[dependencies]
async-stream = "0.3"
colored = "2"
futures = "0.3"
futures-util = "0.3"
lazy_static = "1.4"
quicli = "0.4"
regex = "1"
reqwest = {version = "0.11", default_features = false, features = ["rustls-tls"]}
select = "0.5"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
spinners = '2'
structopt = "0.3"
term = "0.7"
tokio = {version = ">= 1.17, < 2", features = ["macros", "time", "rt-multi-thread"]}
